<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/part_editor_controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_active_pen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/editor_enable_active_pen" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/editor_undo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_undo"
        android:tooltipText="@string/editor_undo"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/editor_redo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_redo"
        android:tooltipText="@string/editor_redo"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/editor_zoom_in"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_zoom_in"
        android:tooltipText="@string/editor_zoom_in"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/editor_zoom_out"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_zoom_out"
        android:tooltipText="@string/editor_zoom_out"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/editor_reset_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_reset_view"
        android:tooltipText="@string/editor_resetView"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/editor_clear_content"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_delete"
        android:tooltipText="@string/editor_clear"
        tools:targetApi="o" />

</LinearLayout>
